# Huffman-Algorithm

./: CMakeLists.txt  LICENSE  README.md  dna.txt
apps/: compress.cpp  decompress.cpp
include/: helpers.hpp  huffman.hpp
personal/: config.toml
